tests/compile/errors/match-type.sieve
require "comparator-i;ascii-numeric";

if header :contains :comparator "i;ascii-numeric" "from" "drunksnipers.com" {
    keep;
}

keep;
